tests/resolver-target/expected/0825-protocols-same-name-method-wrapped-ambiguous.stderr
error: type 'Box' is ambiguous: it is declared in multiple flat-imported modules; qualify the reference or remove the duplicate import
  --> examples/0825-protocols-same-name-method-wrapped-ambiguous.sx:18:20
   |
18 |     getp :: () -> *Box;
   |                    ^^^
